Add new hls segment config api
